--- a/main.css
+++ b/main.css
@@ -5,13 +5,19 @@
 
 /* .left,
 .right { */
-    /* display: flex;
+/* display: flex;
     flex-direction: row; */
-    /* position: absolute;
+/* position: absolute;
     top: 0;
     bottom: 0; */
-    /* display: flex; */
+/* display: flex; */
 /* } */
+
+button {
+    border: none;
+    outline: none;
+    background-color: #EDEDED;
+}
 
 .left {
     /* left: 0; */
@@ -19,6 +25,53 @@
     border: 1px solid green;
     width: 15vw;
     height: 97vh;
+}
+
+.goto {
+    position: relative;
+    top: 2vh;
+    left: 5vw;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFBD2D;
+    background-color: #F6F6F6;
+    transition: all 1s;
+}
+
+/* .goto:hover { */
+.goto {
+    width: 120px;
+    height: 490px;
+    border-radius: 60px;
+}
+
+.goto .button-group {
+    position: absolute;
+    top: 7vh;
+    left: .6vw;
+}
+
+.button-group button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 5px;
+    /* padding: 5px; */
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.print {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFBD2D;
+    transform: rotate(90deg);
 }
 
 .right {
@@ -33,10 +86,6 @@
     position: relative;
     border: 1px solid blue;
 } */
-
-button {
-    outline: none;
-}
 
 img {
     position: relative;
@@ -104,17 +153,15 @@ img {
 .back,
 .next {
     padding: 15px 30px;
-    border: none;
     border-radius: 30px;
     font-size: 20px;
     font-weight: bold;
-    background-color: #EDEDED;
 }
 
 .back {
     position: relative;
     left: 20vw;
-    transition: all 1s;
+    transition: border-radius 1s, box-shadow 1s;
 }
 
 .back:hover {
@@ -123,44 +170,26 @@ img {
     /* position: relative;
     top: 5vw;
     left: 25vw; */
-    transform: all 5s;
+    /* transform: all 5s; */
 }
 
 .next {
     position: relative;
     left: 45vw;
-    transition: all 1s;
+    transition: border-radius 1s, box-shadow 1s;
 }
 
 .next:hover {
     border-radius: 0;
     box-shadow: -5px 5px #333333;
-    transform: all 5s;
+    /* transform: all 5s; */
 }
 
 
-
-/* .card {
-    position: relative;
-    width: 300px;
-    height: 350px;
-    background: #fff;
-    margin: 0 auto;
-    border-radius: 4px; */
-    /* border: 2px solid green; */
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
-  } */
-  
-  /* .card:before,
-  .card:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    background: #fff;
-    transition: 0.5s;
-    z-index: -1;
-  } */
+/* box-shadow:
+0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+0 12.5px 10px rgba(0, 0, 0, 0.06),
+0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+0 100px 80px rgba(0, 0, 0, 0.12); */
