--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ div.goto {
 
 div.goto:hover {
     width: 120px;
-    height: 520px;
+    height: 500px;
     border-radius: 60px;
 }
 
@@ -64,6 +64,19 @@ div.goto:hover .button-group {
     font-weight: bold;
 }
 
+.close {
+    /* display: inline; */
+    /* border: 1px solid red; */
+    width: 0;
+    height: 0;
+}
+
+.close button {
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+
 .close-top,
 .close-bottom {
     position: relative;
@@ -75,17 +88,24 @@ div.goto:hover .button-group {
 .close-bottom:hover {
     color: #333333;
     font-size: 16px;
-    left: 1.75vw;
+    left: 1vw;
+}
+
+.close-top:focus,
+.close-bottom:focus {
+    color: #FFBD2D;
+    /* font-size: 8px;
+    left: 3.5vw; */
 }
 
 .close-top {
-    top: -2vh;
-    left: 2.5vw;
+    top: -6vh;
+    left: 1.5vw;
 }
 
 .close-bottom {
-    top: 2vh;
-    left: 2vw;
+    top: -1vh;
+    left: 1.5vw;
 }
 
 button.stage:focus {
@@ -254,7 +274,8 @@ button.next:focus {
     box-shadow: -5px 5px #333333;
 }
 
-@media only screen and (min-width: 600px) and (max-width: 768px) {
+/* @media only screen and (min-width: 600px) and (max-width: 768px) { */
+@media only screen and (max-width: 768px) {
     div.goto {
         position: relative;
         top: .5vh;
@@ -272,7 +293,7 @@ button.next:focus {
 
     div.goto:hover .button-group {
         position: absolute;
-        top: 3vh;
+        top: 6vh;
     }
 
     .button-group button {
@@ -286,7 +307,7 @@ button.next:focus {
     .close-top,
     .close-bottom {
         position: relative;
-        left: 3.5vw;
+        left: 2vw;
         width: fit-content;
         font-size: 8px;
     }
@@ -294,16 +315,23 @@ button.next:focus {
     .close-top:hover,
     .close-bottom:hover {
         color: #333333;
-        font-size: 8px;
-        left: 3.5vw;
+        font-size: 10px;
+        left: 1.5vw;
+    }
+
+    .close-top:focus,
+    .close-bottom:focus {
+        color: #FFBD2D;
+        /* font-size: 8px;
+        left: 3.5vw; */
     }
 
     .close-top {
-        top: -1vh;
+        top: -6vh;
     }
 
     .close-bottom {
-        top: 1vh;
+        top: -2vh;
     }
 
     .q1,
@@ -421,7 +449,8 @@ button.next:focus {
 
 }
 
-@media only screen and (min-width: 320px) and (max-width: 425px) {
+/* @media only screen and (min-width: 320px) and (max-width: 425px) { */
+@media only screen and (max-width: 425px) {
     /* body {
         border: 1px solid red;
     } */
@@ -438,14 +467,14 @@ button.next:focus {
         width: 40px;
         height: 40px;
         /* height: 80px; */
-        font-size: 12px;
+        font-size: 10px;
     }
 
     div.goto:hover {
         position: relative;
         left: 5vw;
         width: 100px;
-        height: 420px;
+        height: 400px;
         border-radius: 50px;
         box-shadow:
             0 2.8px 2.2px rgba(0, 0, 0, 0.034),
@@ -459,7 +488,7 @@ button.next:focus {
 
     div.goto:hover .button-group {
         position: absolute;
-        top: 6vh;
+        top: 8vh;
         left: 2vw;
     }
 
@@ -475,26 +504,33 @@ button.next:focus {
     .close-bottom {
         position: relative;
         /* top: 5vh; */
-        /* left: 3.5vw; */
+        /* left: 5vw !important; */
         /* width: fit-content; */
-        font-size: 12px;
+        /* font-size: 18px; */
     }
 
     .close-top:hover,
     .close-bottom:hover {
         /* color: #333333; */
         font-size: 12px;
-        left: 6vw;
+        left: 2vw;
+    }
+
+    .close-top:focus,
+    .close-bottom:focus {
+        color: #FFBD2D;
+        /* font-size: 8px;
+        left: 3.5vw; */
     }
 
     .close-top {
-        top: -3vh;
-        left: 6vw;
+        /* top: -3vh; */
+        left: 4vw;
     }
 
     .close-bottom {
-        top: 3vh;
-        left: 6vw;
+        /* top: 3vh; */
+        left: 4vw;
     }
 
     /* .q1,
