--- a/welcome.css
+++ b/welcome.css
@@ -1,4 +1,5 @@
 body {
+    display: flex;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: #333333;
@@ -14,11 +15,11 @@ body {
 }
 
 img {
-    width: 150px;
     position: absolute;
     top: 10%;
     left: 50%;
     transform: translate(-50%, -5%);
+    width: 150px;
 }
 
 .title {
@@ -26,10 +27,10 @@ img {
     top: 35%;
     left: 50%;
     width: fit-content;
-    padding: 15px 30px ;
+    padding: 15px 30px;
     border-radius: 50px;
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: bold;
     color: #FFBD2D;
     background-color: #F5F5F5;
     transform: translate(-50%, -5%);
@@ -54,10 +55,80 @@ button {
     bottom: 15%;
     right: 5%;
     border: none;
+    outline: none;
     padding: 15px 30px;
     border-radius: 30px;
     font-size: 20px;
     font-weight: bold;
     background-color: #EDEDED;
+    transition: border-radius 1s, box-shadow 1s, top 1s;
 }
 
+button.begin:focus {
+    border-radius: 0;
+    color: #FFFFFF;
+    background-color: #FFBD2D;
+    box-shadow: none;
+}
+
+.begin:hover {
+    bottom: 15.5%;
+    border-radius: 0;
+    box-shadow: -5px 5px #333333;
+}
+
+@media only screen and (max-width: 768px) {
+    img {
+        width: 100px;
+    }
+
+    .title {
+        width: fit-content;
+        padding: 10px 20px;
+        border-radius: 40px;
+        font-size: 40px;
+    }
+
+    .remarks {
+        width: 70vw;
+        font-size: 16px;
+        font-weight: bold;
+        color: #718096;
+        transform: translate(-50%, -5%);
+    }
+
+    button {
+        padding: 10px 20px;
+        border-radius: 30px;
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    img {
+        width: 80px;
+    }
+
+    .title {
+        width: 85vw;
+        padding: 10px 15px;
+        border-radius: 30px;
+        font-size: 20px;
+    }
+
+    .remarks {
+        position: absolute;
+        top: 50%;
+        width: 90vw;
+        font-size: 12px;
+        font-weight: bold;
+        color: #718096;
+        transform: translate(-50%, -5%);
+    }
+
+    button {
+        padding: 10px 20px;
+        border-radius: 30px;
+        font-size: 16px;
+    }
+}
