--- a/main.css
+++ b/main.css
@@ -376,15 +376,15 @@ button.next:focus {
 
     .print {
         position: absolute;
-        left: 2vw;
+        left: 4vw;
         bottom: 10vh;
         font-size: 8px;
     }
 
     /* img {
         position: relative; */
-        /* top: .5%; */
-        /* left: 60%;
+    /* top: .5%; */
+    /* left: 60%;
         width: 50px; */
     /* } */
 
@@ -572,7 +572,7 @@ button.next:focus {
         border: 1.5px solid #EDEDED;
         background-color: #FFFFFF;
         transition: box-shadow .5s;
-    /* }
+        /* }
 
     .form:hover {
         box-shadow: -2px 2px 2.5px .25px #EDEDED;
@@ -612,6 +612,7 @@ button.next:focus {
         border-radius: 0;
         box-shadow: -2.5px 2.5px #333333;
     } */
+    }
 }
 
 @media only screen and (max-width: 425px) {
@@ -768,4 +769,28 @@ button.next:focus {
         left: 35vw;
         transition: border-radius 1s, box-shadow 1s, top 1s;
     } */
+}
+
+@media only screen and (max-width: 2560px) {
+
+    .print {
+        position: absolute;
+        left: 3vw;
+        bottom: 12vh;
+        font-size: 20px;
+    }
+
+    img {
+        width: 160px;
+    }
+
+    .form {
+        width: 2000px;
+        height: 700px;
+    }
+
+    .next {
+        left: 60vw;
+        /* transition: border-radius 1s, box-shadow 1s, top 1s; */
+    }
 }
